# nrfdfu-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: dfu_package.rs  elf.rs  init_packet.rs  macros.rs  main.rs  messages.rs  slip.rs  usb_target.rs
