[package]
name = "nrfdfu"
version = "0.1.0"
authors = ["Lotte Steenbrink <lotte.steenbrink@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
leb128 = "0.2.4"
sha2 = "0.9.3"
log = "0.4.14"

[dependencies.env_logger]
version = "0.8.3"
default-features = false
features = ["termcolor", "atty"]

[dependencies.object]
version = "0.24.0"
default-features = false
features = ["elf", "read_core", "std"]

[dependencies.serialport]
# Note: we are using a fork due compatibility problems.
# See https://github.com/ferrous-systems/embedded-trainings-2020/issues/148 for more details.
git = "https://github.com/ferrous-systems/serialport-rs-hotfix.git"
branch = "fix-usb-deprecation"

[dev-dependencies]
expect-test = "1"
