[package]
name = "nrfdfu"
version = "0.1.0"
authors = ["Lotte Steenbrink <lotte.steenbrink@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
byteorder = "1.4.3"
leb128 = "0.2.4"
sha2 = "0.9.3"
log = "0.4.14"

[dependencies.env_logger]
version = "0.8.3"
default-features = false
features = ["termcolor", "atty"]

[dependencies.object]
version = "0.24.0"
default-features = false
features = ["elf", "read_core", "std"]

[dependencies.serialport]
# Note: we are using a fork due compatibility problems.
# See https://github.com/ferrous-systems/embedded-trainings-2020/issues/148 for more details.
package = "ferrous-serialport"
version = "4.0.2"

[dev-dependencies]
expect-test = "1"
